--- a/Task3_Sockets!/ChatApp/public/style.css
+++ b/Task3_Sockets!/ChatApp/public/style.css
@@ -25,6 +25,7 @@ form {
   background: #000000;
   padding: 3px;
   position: fixed;
+  /* bottom: 0px; */
   bottom: 5px;
   width: 83%;
 }
@@ -33,12 +34,12 @@ form input {
   background-color: #e6ffe6;
   border: 0;
   padding: 10px;
-  width: 90%;
+  width: 80%;
   margin-right: 0.5%;
 }
 
 form button {
-  width: 9%;
+  width: 18%;
   background: #00e600;
   border: none;
   padding: 5px;
